# NSForest

./: .gitignore  .readthedocs.yaml  LICENSE.txt  NS-Forest_tutorial.html  NSForest_v3.py  NSForest_v3dot9_1.py  NSForest_v3dot9_2.py  NSForest_v4dot0_dev.py  NS_Forest.ipynb  NS_Forest_v2.ipynb  README.md  README.txt  arguments.csv  arguments_template.csv  combine_results.py  environment notes.yml  environment.yml  environment_3_13.yml  lumache.py  main.py  nsforest.py  nsforest.yml  pyproject.toml  saving_metadata.py
.ipynb_checkpoints/: NS_Forest-checkpoint.ipynb
NSForest_outputs/: default_binary_scores.csv  default_cluster_medians.csv  default_gene_selection.csv  default_markers.csv  default_results.csv  default_supplementary.csv
api/: index.rst  preprocessing.rst
demo_data/: marker_list.csv
docs/: conf.py  index.rst  nsforesting.rst  requirements.txt  tutorials.rst
nsforest/: __init__.py  __main__.py  calculate_diagonals.py  decisiontreewithmarkerlist.py  mydecisiontreeevaluation.py  myrandomforest.py  nsforest.py  plotting.py  utils.py
outputs_layer1/: cluster_boxplot_f_score.html  cluster_boxplot_fraction.html  cluster_boxplot_fscore.html  cluster_boxplot_onTarget.html  cluster_boxplot_ppv.html  cluster_boxplot_precision.html  cluster_boxplot_recall.html  cluster_gene_selection.csv  cluster_marker_fractions.csv  cluster_markers.csv  cluster_markers_onTarget.csv  cluster_markers_onTarget_supp.csv  cluster_results.csv  cluster_results.pkl  cluster_scatter_f_score.html  cluster_scatter_fraction.html  cluster_scatter_fscore.html  cluster_scatter_onTarget.html  cluster_scatter_ppv.html  cluster_scatter_precision.html  cluster_scatter_recall.html  cluster_supplementary.csv  marker_eval_boxplot_PPV.html  marker_eval_boxplot_f_score.html  marker_eval_boxplot_onTarget.html  marker_eval_boxplot_precision.html  marker_eval_boxplot_recall.html  marker_eval_markers_onTarget.csv  marker_eval_markers_onTarget_supp.csv  marker_eval_results.csv  marker_eval_results.pkl  marker_eval_scatter_PPV.html  marker_eval_scatter_f_score.html  marker_eval_scatter_onTarget.html  marker_eval_scatter_precision.html  marker_eval_scatter_recall.html  markers_boxplot_fraction.html  markers_boxplot_fscore.html  markers_boxplot_ppv.html  markers_markers_onTarget.csv  (+5 more)
tutorials/: tutorial.ipynb
(+39 files in other folders)
