[tool.poetry]
name = "nsforest"
version = "4.0"
description =  "A machine learning method for the discovery of minimum marker gene combinations for cell type identification from single-cell RNA sequencing"
license = "MIT"
authors = [
    "Renee Zhang <zhangy@jcvi.org>",
    "Richard Scheuermann <richard.scheuermann@nih.gov>",
    "Brian Aevermann <baevermann@chanzuckerberg.com>", 
    "Angela Liu <aliu@jcvi.org>", 
    "Beverly Peng <bpeng@jcvi.org>", 
    "Ajith V. Pankajam <ajith.viswanathanasaripankajam@nih.gov>"
]
maintainers = [
    "Beverly Peng <bpeng@jcvi.org>"
]
readme = "README.md"

[tool.poetry.dependencies]
scanpy = "^1.9.3"
python = "^3.8"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
